# shazam-reimplementation

./: ARCHITECTURE.md  DEPLOYMENT.md  GETTING_STARTED.md  QUICKSTART.md  README.md  analysis_and_figures.py  example.py  fingerprinting.py  main.py  pyproject.toml  research_results.json  test_validation.py  utils.py
backend/: README.md  app.py  fingerprint_db.pkl  models.py  requirements.txt  research_helpers.py  routes.py  service.py
core/: README.md  __init__.py  config.py  database.py  matcher.py
docs/: API_CONTRACT.md  FULLSTACK_README.md  PROJECT_SUMMARY.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/lib/: api.ts
frontend/pages/: add-songs.tsx  index.tsx  recognize.tsx  research.tsx
frontend/styles/: globals.css
research/: README.md  run_research_experiments.py
scripts/: README.md  example.py  main.py  run.sh  shazam-script.py  start.sh  test_validation.py
