[project]
name = "shazam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.40.0",
]
